# nkcli

./: .gitignore  Makefile  README.md  config.toml  main.py  pyproject.toml
nkcli/: config.py  constants.py  db.py  horse.py  scraper.py
nkcli/console/: __init__.py  cmd.py
