[tool.poetry]
name = "nkcli"
version = "0.0.1"
description = "netkeiba CLI tool"
authors = ["Hirotaka Ichikawa <hichtakk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"
sqlalchemy = "^1.3.16"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
